--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     </menu>
 
     <div class="sidebar-social">
-      <li class="social-items"><a href="https://www.facebook.com/{{site.facebook}}" class="social-links"><i class="social-icons fa fa-facebook" aria-hidden="true"></i></a></li>
+      <li class="social-items"><a class="social-links"><i class="social-icons fa fa-facebook" aria-hidden="true"></i></a></li>
       <li class="social-items"><a href="https://twitter.com/{{site.twitter}}" class="social-links"><i class="social-icons fa fa-twitter" aria-hidden="true"></i></a></li>
       <li class="social-items"><a href="https://github.com/{{site.github}}" class="social-links"><i class="social-icons fa fa-github" aria-hidden="true"></i></a></li>
     </div>
