--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 
     <menu class="sidebar-menu">
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">Timeline</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">Certificates</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">Certificates</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">About</a></li>
     </menu>
 
